AC_PREREQ(2.52)

AC_INIT(aeskulap, 0.2.1, pipelka@teleweb.at, aeskulap)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(aeskulap, 0.2.1)

AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")
AM_MAINTAINER_MODE


dnl
dnl Require programs
dnl
AC_PROG_INTLTOOL
AM_PROG_LIBTOOL
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_INSTALL
AM_BINRELOC

dnl
dnl gettext package
dnl
GETTEXT_PACKAGE=aeskulap
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Translation domain used])

ALL_LINGUAS="en de es hu pt"
AM_GLIB_GNU_GETTEXT

dnl
dnl Required headers
dnl
AC_HEADER_STDC

dnl
dnl Checks for typedefs, structures, and compiler characteristics.
dnl
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_HEADER_TIME

AC_CHECK_LIB(jpeg,jpeg_read_header)
AC_CHECK_LIB(tiff,TIFFClose)
AC_CHECK_LIB(png,png_create_read_struct)

PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.6.0)
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

PKG_CHECK_MODULES(GLADEMM, libglademm-2.4 >= 2.6.0)
AC_SUBST(GLADEMM_CFLAGS)
AC_SUBST(GLADEMM_LIBS)

PKG_CHECK_MODULES(GTHREAD, gthread-2.0)
AC_SUBST(GTHREAD_CFLAGS)
AC_SUBST(GTHREAD_LIBS)

PKG_CHECK_MODULES(GCONFMM, gconfmm-2.6 >= 2.10.0)
AC_SUBST(GCONFMM_CFLAGS)
AC_SUBST(GCFONMM_LIBS)


AC_ARG_ENABLE(schemas-install,AC_HELP_STRING([--disable-schemas-install],
					     [Disable installation of the gconf schemas]))

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
if test x"$GCONFTOOL" = xno ; then
	AC_MSG_ERROR([gconftool2 executable not found in your path - should be 
installed with GConf])
fi
AM_GCONF_SOURCE_2


dnl AC_CONFIG_SUBDIRS(dcmtk)

DCMJPEG_LIBS="-L../dcmtk/dcmjpeg/libijg8 -L../dcmtk/dcmjpeg/libijg12 -L../dcmtk/dcmjpeg/libijg16 -lijg8 -lijg12 -lijg16"
AC_SUBST(DCMJPEG_LIBS)

DCMTK_CFLAGS="-DHAVE_CONFIG_H -I\$(top_srcdir)/dcmtk/config/include -I\$(top_srcdir)/dcmtk/ofstd/include -I\$(top_srcdir)/dcmtk/dcmdata/include -I\$(top_srcdir)/dcmtk/dcmnet/include -I\$(top_srcdir)/dcmtk/dcmimage/include -I\$(top_srcdir)/dcmtk/dcmimgle/include -I\$(top_srcdir)/dcmtk/dcmjpeg/include"
DCMTK_LIBS="-L../dcmtk/ofstd/libsrc \
-L../dcmtk/dcmdata/libsrc \
-L../dcmtk/dcmnet/libsrc \
-L../dcmtk/dcmjpeg/libsrc \
-L../dcmtk/dcmimage/libsrc \
-L../dcmtk/dcmimgle/libsrc \
-ldcmjpeg \$(DCMJPEG_LIBS) -ldcmimage -ldcmimgle -ldcmnet -ldcmdata -lofstd -lrt -lpthread"

AC_SUBST(DCMTK_CFLAGS)
AC_SUBST(DCMTK_LIBS)

dnl set PREFIX
if test "x${prefix}" = "xNONE"; then
    packageprefix=${ac_default_prefix}
else
    packageprefix=${prefix}
fi

dnl AC_CONFIG_SUBDIRS(dcmtk)

AC_OUTPUT([
autopackage/default.apspec
po/Makefile.in
Makefile
configuration/Makefile
imagepool/Makefile
src/Makefile
widgets/Makefile
pixmaps/Makefile
])

cd $srcdir/dcmtk
export CFLAGS="$CFLAGS"
export CXXFLAGS="$CXXFLAGS"
sh ./configure --without-openssl --without-zlib --without-libwrap --prefix=${prefix} --libdir=${prefix}/lib/aeskulap
