noinst_LTLIBRARIES = libadisplaylist.la

libadisplaylist_la_SOURCES = \
	aobject.h \
	aobject.cpp \
	aobjectlist.h \
	aobjectlist.cpp \
	point2d.h \
	point2d.cpp \
	point3d.h \
	point3d.cpp \
	plane3d.h \
	plane3d.cpp \
	straight2d.h \
	straight2d.cpp \
	straight3d.h \
	straight3d.cpp \
	line2d.h \
	line2d.cpp \
	line3d.h \
	line3d.cpp \
	adisplayobject.h

INCLUDES = \
	$(GTKMM_CFLAGS)
