imagesdir = $(aeskulap_images_dir)
images_DATA = \
	aeskulap.png \
	grid-16.png \
	grid-1.png \
	grid-2h.png \
	grid-2v.png \
	grid-4.png \
	series-1.png \
	series-2h.png \
	series-4.png \
	stock-layers-24.png \
	stock-tool-scale-22.png \
	stock-tool-eraser-22.png \
	cursor_pan.png \
	cursor_windowlevel.png \
	cursor_zoom.png

EXTRA_DIST = \
	README \
	aeskulap.svg \
	$(images_DATA)
