imagesdir = $(datadir)/aeskulap/images
images_DATA = \
	aeskulap.png \
	grid-16.png \
	grid-1.png \
	grid-2h.png \
	grid-2v.png \
	grid-4.png \
	series-1x1.png \
	series-2x1.png \
	series-2x2.png \
	series-3x2.png \
	series-3x3.png \
	series-4x4.png \
	stock-layers-24.png \
	stock-tool-measure-22.png \
	stock-tool-scale-22.png \
	stock-tool-eraser-22.png \
	cursor_pan.png \
	cursor_windowlevel.png \
	cursor_zoom.png \
	filmholes-big-left.png \
	filmholes-big-right.png \
	start-here.png

EXTRA_DIST = \
	README \
	aeskulap.svg \
	$(images_DATA)
