noinst_LTLIBRARIES = libgtkdicom.la

libgtkdicom_la_SOURCES = \
	atiler.h \
	atiler.cpp \
	aseriesmenu.h \
	aseriesmenu.cpp \
	astudytab.h \
	astudytab.cpp \
	imagelayouttoolbutton.h \
	imagelayouttoolbutton.cpp \
	serieslayouttoolbutton.h \
	serieslayouttoolbutton.cpp \
	displayparameters.h \
	displayparameters.cpp \
	seriesview.h \
	seriesview.cpp \
	studyview.h \
	studyview.cpp \
	asimpledisplay.h \
	asimpledisplay.cpp \
	adisplay.h \
	adisplay.cpp

#libgtkdicom_la_LIBADD = \
#	$(GTKMM_LIBS)

INCLUDES = \
	-I$(top_srcdir)/imagepool \
	-I$(top_srcdir)/src \
	$(GTKMM_CFLAGS)
